--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@ html, body {
 .info {
     font-family: monospace;
     color: #EEEEEE;
+    white-space: pre-line;
+    font-size: 1.25em;
 
     -moz-user-select: -moz-none;
     -khtml-user-select: none;
@@ -22,10 +24,12 @@ html, body {
     user-select: none;
 }
 .infoHolder {
+
+}
+.controls {
     position: fixed;
     top: 1%;
     left: 0%;
-    padding: 0.25em 0.5em;
+    padding: 0.5em 1em 0.5em 2em;
     background: rgba(0,0,0, 0.25);
-    padding-left: 1em;
 }
